[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/sheets/backdrops.png" type="Texture" id=1]
[ext_resource path="res://assets/images/sheets/sprites.png" type="Texture" id=2]
[ext_resource path="res://assets/images/icons/star-light.png" type="Texture" id=3]
[ext_resource path="res://assets/images/icons/star-dark.png" type="Texture" id=4]
[ext_resource path="res://src/town/TownMenu.gd" type="Script" id=5]
[ext_resource path="res://src/menu/InvButton.tscn" type="PackedScene" id=6]

[node name="TownMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0588235, 0.0588235, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -4, 0 )
texture = ExtResource( 1 )
centered = false
vframes = 6
hframes = 21
frame = 24

[node name="TownMenu" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 49.0
margin_right = 68.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blacksmith" type="Button" parent="TownMenu"]
margin_right = 64.0
margin_bottom = 9.0
rect_min_size = Vector2( 0, 9 )

[node name="Label" type="Label" parent="TownMenu/Blacksmith"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 2.0
margin_bottom = 1.0
text = "Blacksmith"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="TownMenu"]
margin_top = 10.0
margin_right = 64.0
margin_bottom = 19.0
rect_min_size = Vector2( 0, 9 )

[node name="Label" type="Label" parent="TownMenu/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 2.0
margin_bottom = 1.0
text = "Alchemist"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="TownMenu"]
margin_top = 20.0
margin_right = 64.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 9 )

[node name="Label" type="Label" parent="TownMenu/Button3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 2.0
margin_bottom = 1.0
text = "Monestary"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="TownMenu"]
margin_top = 30.0
margin_right = 64.0
margin_bottom = 39.0
rect_min_size = Vector2( 0, 9 )

[node name="Label" type="Label" parent="TownMenu/Button4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 2.0
margin_bottom = 1.0
text = "Wizard Tower"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="TownMenu"]
margin_top = 40.0
margin_right = 64.0
margin_bottom = 49.0
rect_min_size = Vector2( 0, 9 )

[node name="Label" type="Label" parent="TownMenu/Button5"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 2.0
margin_bottom = 1.0
text = "Tavern"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="TownMenu"]
margin_top = 50.0
margin_right = 64.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 9 )

[node name="Label" type="Label" parent="TownMenu/Button7"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 2.0
margin_bottom = 1.0
text = "Docks"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TownGates" type="Button" parent="TownMenu"]
margin_top = 60.0
margin_right = 64.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 9 )

[node name="Label" type="Label" parent="TownMenu/TownGates"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 2.0
margin_bottom = 1.0
text = "Town Gates"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 42.0
margin_right = 71.0
margin_bottom = 49.0
text = "Where to?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blacksmith" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Blacksmith"]
margin_right = 72.0
margin_bottom = 122.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Blacksmith/Panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 70.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0.588235, 0.258824, 0.32549, 1 )
text = "BLACKSMITH"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Blacksmith/Panel"]
position = Vector2( 4, 6 )
texture = ExtResource( 2 )
centered = false
vframes = 20
hframes = 10
frame = 30

[node name="Quote" type="Label" parent="Blacksmith/Panel"]
margin_left = 13.0
margin_top = 3.0
margin_right = 58.0
margin_bottom = 24.0
text = "\"Buying?\""
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stars" type="TextureRect" parent="Blacksmith/Panel"]
margin_left = 7.0
margin_top = 26.0
margin_right = 66.0
margin_bottom = 31.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="TextureRect" parent="Blacksmith/Panel/Stars"]
margin_right = 29.0
margin_bottom = 5.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Blacksmith/Panel"]
margin_left = 4.0
margin_top = 44.0
margin_right = 68.0
margin_bottom = 77.0
custom_constants/separation = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyBS" type="Button" parent="Blacksmith/Panel/VBoxContainer"]
margin_right = 64.0
margin_bottom = 9.0

[node name="Label" type="Label" parent="Blacksmith/Panel/VBoxContainer/BuyBS"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
text = "Buy"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellBS" type="Button" parent="Blacksmith/Panel/VBoxContainer"]
margin_top = 12.0
margin_right = 64.0
margin_bottom = 21.0

[node name="Label" type="Label" parent="Blacksmith/Panel/VBoxContainer/SellBS"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
text = "Sell"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftBS" type="Button" parent="Blacksmith/Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 64.0
margin_bottom = 33.0

[node name="Label" type="Label" parent="Blacksmith/Panel/VBoxContainer/CraftBS"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
text = "Craft"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leave_BS" type="Button" parent="Blacksmith/Panel"]
margin_left = 4.0
margin_top = 109.0
margin_right = 68.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Blacksmith/Panel/Leave_BS"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
text = "Leave"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="ColorRect" parent="Blacksmith/Panel"]
visible = false
margin_top = 26.0
margin_right = 72.0
margin_bottom = 122.0
color = Color( 0.0588235, 0.0588235, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Blacksmith/Panel/Buy"]
margin_right = 72.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvButton" parent="Blacksmith/Panel/Buy/VBoxContainer" instance=ExtResource( 6 )]

[node name="InvButton2" parent="Blacksmith/Panel/Buy/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 10.0
margin_bottom = 19.0

[node name="InvButton3" parent="Blacksmith/Panel/Buy/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 20.0
margin_bottom = 29.0

[node name="InvButton4" parent="Blacksmith/Panel/Buy/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 30.0
margin_bottom = 39.0

[node name="InvButton5" parent="Blacksmith/Panel/Buy/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 40.0
margin_bottom = 49.0

[node name="InvButton6" parent="Blacksmith/Panel/Buy/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 50.0
margin_bottom = 59.0
[connection signal="pressed" from="TownMenu/Blacksmith" to="." method="_on_Blacksmith_pressed"]
[connection signal="pressed" from="TownMenu/TownGates" to="." method="_on_TownGates_pressed"]
[connection signal="pressed" from="Blacksmith/Panel/VBoxContainer/BuyBS" to="." method="_on_BuyBS_pressed"]
[connection signal="pressed" from="Blacksmith/Panel/VBoxContainer/SellBS" to="." method="_on_SellBS_pressed"]
[connection signal="pressed" from="Blacksmith/Panel/Leave_BS" to="." method="_on_Leave_BS_pressed"]
